# translation-service

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-run.sh  test.sh
.circleci/: config.yml
scripts/: compile.sh  download-test-models.sh  load-test.sh  run.sh  test.sh
src/: CMakeLists.txt  server.cpp  translation.h
tests/integration/: test_api.py
tests/load/: stress.py
